notification z-index fixed

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -89,4 +89,7 @@
 		margin-left: 2px !important;
 		margin-right: 2px !important;
 	}
+	.ant-message {
+		z-index: 2010;
+	}
 }
